# UltrafastSecp256k1

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  conanfile.py  sonar-project.properties  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  performance_regression.md
.github/workflows/: audit-report.yml  auditor-prep.yml  bench-regression.yml  benchmark.yml  caas-evidence-refresh.yml  caas-freshness-check.yml  caas.yml  ci.yml  clang-tidy.yml  code-quality.yml  codeql.yml  cppcheck.yml  ct-independence.yml  cycle-ct.yml  gate.yml  gpu-selfhosted.yml  nightly.yml  nuget-native.yml  packaging.yml  preflight.yml  release.yml  scorecard.yml  security-audit.yml  semgrep.yml  slsa-provenance.yml  sonarcloud.yml  valgrind-ct.yml  wycheproof.yml
audit/: CMakeLists.txt  audit_ct.cpp  audit_ct_namespace.cpp  audit_field.cpp  audit_fuzz.cpp  audit_helpers.hpp  audit_integration.cpp  audit_invariants.cpp  audit_perf.cpp  audit_point.cpp  audit_scalar.cpp  audit_security.cpp  audit_zk.cpp  differential_test.cpp  feature_run_stubs_unified.cpp  shim_run_stubs_unified.cpp  test_adversarial_protocol.cpp  test_batch_randomness.cpp  test_c_abi_negative.cpp  test_cross_libsecp256k1.cpp  test_exploit_batch_schnorr_forge.cpp  test_exploit_batch_sign.cpp  test_exploit_batch_soundness.cpp  test_exploit_batch_verify_correctness.cpp  test_exploit_batch_verify_malleability.cpp  test_exploit_batch_verify_poison.cpp  test_exploit_boundary_sentinels.cpp  test_exploit_buff_kr_ecdsa.cpp  test_exploit_ecdsa_fast_path_isolation.cpp  test_exploit_eucleak_inversion_timing.cpp  test_exploit_foreign_field_plonk.cpp  test_exploit_frost_absent_signer_id.cpp  test_exploit_frost_ct_nonce.cpp  test_exploit_glv_endomorphism.cpp  test_exploit_hedged_nonce_bias.cpp  test_exploit_hertzbleed_dvfs_timing.cpp  test_exploit_multiscalar.cpp  test_exploit_musig2_infinity_pubnonce.cpp  test_exploit_musig2_nonce_erasure_le32_ecdh.cpp  test_exploit_musig2_parallel_session_cross.cpp  (+51 more)
bindings/python/: pyproject.toml
bindings/rust/ultrafast-secp256k1/: Cargo.toml
bindings/rust/ultrafast-secp256k1-sys/: Cargo.toml
bindings/wasm/: package.json
ci/: audit_test_quality_scanner.py  build_canonical_data.py  check_advisory_has_blocking_test.py  check_advisory_skip_ceiling.py  check_advisory_skip_returns.sh  check_bench_doc_consistency.py  check_exploit_wiring.py  check_profile_smoke.sh  check_protocol_invariants.py  check_required_checks_match_jobs.py  check_secret_path_changes.py  check_security_fix_has_test.py  check_version_sync.py  ci_gate_detect.py  ci_local.sh  code_quality_baseline.json  collect_ct_evidence.py  ct_independence_check.py  external_audit_prep.sh  generate_audit_package.sh  generate_traceability.sh  glv_exhaustive_check.py  nonce_bias_detector.py  profile_manifest.py  profiles.json  rfc6979_spec_verifier.py  rule16_enforce.sh  run_fast_gates.sh  sync_canonical_numbers.py  sync_module_count.py  test_audit_scripts.py  test_caas_integrity.py  valgrind_ct_check.sh  validate_assurance.py
compat/libbitcoin_bridge/: CMakeLists.txt  README.md
compat/libbitcoin_bridge/bench/: bench_lbtc_batch.cpp
compat/libbitcoin_bridge/example/: lbtc_batch_demo.cpp
compat/libbitcoin_bridge/include/: ufsecp_libbitcoin.h
compat/libbitcoin_bridge/src/: ufsecp_libbitcoin.cpp
compat/libbitcoin_bridge/tests/: test_lbtc_bridge.cpp  test_lbtc_consensus_diff.cpp
compat/libsecp256k1_bchn_shim/src/: shim_schnorr_bch.cpp
compat/libsecp256k1_shim/: CMakeLists.txt  README.md
compat/libsecp256k1_shim/include/: secp256k1.h
compat/libsecp256k1_shim/src/: shim_batch_verify.cpp  shim_context.cpp  shim_ecdh.cpp  shim_ecdsa.cpp  shim_ellswift.cpp  shim_extrakeys.cpp  shim_internal.hpp  shim_musig.cpp  shim_pubkey.cpp  shim_pubkey_helpers.hpp  shim_recovery.cpp  shim_schnorr.cpp  shim_seckey.cpp
compat/libsecp256k1_shim/tests/: shim_test.cpp  test_shim_der_zero_r.cpp  test_shim_null_ctx.cpp  test_shim_recovery_and_noncefp.cpp  test_shim_security_edge_cases.cpp
compat/litecoin_shim/: CMakeLists.txt  README.md
docs/: ABI_VERSIONING.md  API_REFERENCE.md  API_SECURITY_CONTRACTS.json  ARCHITECTURE.md  ARM64_AUDIT_BENCHMARK.md  ATTACK_GUIDE.md  AUDIT_CHANGELOG.md  AUDIT_COVERAGE.md  AUDIT_GUIDE.md  AUDIT_PHILOSOPHY.md  AUDIT_READINESS_REPORT_v1.md  AUDIT_REPORT.md  AUDIT_SCOPE.md  AUDIT_STANDARD.md  AUDIT_TRACEABILITY.md  BACKEND_ASSURANCE_MATRIX.md  BACKEND_PARITY.md  BENCHMARKING.md  BENCHMARKS.md  BENCHMARK_METHODOLOGY.md  BINDINGS.md  BINDINGS_PACKAGING.md  BITCOIN_CORE_BACKEND_EVIDENCE.md  BITCOIN_CORE_BENCH_RESULTS.json  BITCOIN_CORE_INTEGRATION.md  BITCOIN_CORE_PR_BLOCKERS.md  BITCOIN_CORE_PR_BODY.md  BITCOIN_CORE_PR_DESCRIPTION.md  BUILDING.md  BUILD_INTEGRATION_GUIDE.md  CAAS_COMPLETENESS_GAP_ANALYSIS.md  CAAS_FAQ.md  CAAS_GAP_CLOSURE_ROADMAP.md  CAAS_REVIEWER_QUICKSTART.md  COMPLIANCE_STANCE.md  CONTRIBUTORS.md  CROSS_PLATFORM_TEST_MATRIX.md  CT_EMPIRICAL_REPORT.md  CT_VERIFICATION.md  DIFFERENTIAL_TESTING.md  (+36 more)
docs/adoption/: INTEGRATION.md
docs/archive/: README_BENCH_2026-05-21.md
docs/wiki/: Audit-Framework.md  Benchmark-Comparison.md
include/ufsecp/: CMakeLists.txt  SUPPORTED_GUARANTEES.md  ufsecp.h  ufsecp_version.h  ufsecp_version.h.in
packaging/: README.md
packaging/arch/: PKGBUILD
packaging/cocoapods/: UltrafastSecp256k1.podspec
packaging/debian/: changelog
packaging/nuget/: UltrafastSecp256k1.Native.nuspec
packaging/rpm/: libufsecp.spec
src/bch/: CMakeLists.txt
src/bch/cuda/: bch_grinding.cu
src/bch/src/: cashaddr.cpp  rpa.cpp
src/cpu/: CMakeLists.txt
src/cpu/bench/: bench_bip352_cpu.cpp  bench_unified.cpp  bench_vs_libsecp.cpp
src/cpu/src/: adaptor.cpp  address.cpp  batch_verify.cpp  bip32.cpp  bip324.cpp  bip39.cpp  ct_scalar.cpp  ct_sign.cpp  ecdsa.cpp  ellswift.cpp  frost.cpp  musig2.cpp  schnorr.cpp  segwit.cpp  sp_scan_batch_impl.hpp  sp_scanner.cpp  taproot.cpp  ufsecp_impl.cpp
src/cpu/tests/: run_selftest.cpp  test_bip32.cpp  test_coins.cpp  (+4 more)
src/cuda/: CMakeLists.txt
tools/: update_canonical_from_bench.py
(+16 files in other folders)
